Added scaffolded model with EF database

--- a/MVCDemoRepo/appsettings.json
+++ b/MVCDemoRepo/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "MVCDemoRepoContext": "Server=(localdb)\\mssqllocaldb;Database=MVCDemoRepoContext-3cbd687d-9934-4a24-bb29-6481a14f6f3b;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
